# delixon-nexenv

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE-FAQ.md  NOTICE  README.md  SECURITY.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
.devenv/: README.md  settings.vscode.json  terminal-init.ps1  terminal-init.sh
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  ci.yml  enforce-branch-flow.yml  npm-publish.yml  pip-publish.yml  release.yml  security-audit.yml
docs/: INVESTOR_PITCH.md  PLAN.md  README.md  REPO_STRUCTURE.md
docs/cli/: CLI_REFERENCE.md
docs/commander_cli/: CLI_REFERENCE.md
docs/operativo/: ROADMAP.md
docs/producto/: INVESTOR_PITCH.md  ONE_PAGER.md  PLAN.md
docs/tecnico/: MANIFEST_SPEC.md  ci-github-actions.md  estructura-backend.md  refactor-core-v1.md
docs/tecnico/storage/: MIGRATION_PLAN.md
npm/cli/: README.md  package.json
npm/cli/scripts/: postinstall.js
pip/cli/: README.md  pyproject.toml
pip/cli/nexenv/: __init__.py  __main__.py  cli.py
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  deny.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial.sql
src-tauri/src/: lib.rs  main.rs  storage.rs
src-tauri/src/commands/: catalog.rs  config.rs  dependencies.rs  detection.rs  docker.rs  environments.rs  git.rs  health.rs  manifest.rs  mod.rs  notes.rs  portable.rs  processes.rs  projects.rs  recipes.rs  rules.rs  runtimes.rs  scaffold.rs  scripts.rs  shell.rs  snapshots.rs  templates.rs  versioning.rs  vscode.rs
src-tauri/src/core/: config.rs  detection.rs  docker.rs  doctor.rs  error.rs  errors.rs  git.rs  manifest.rs  mod.rs  notes.rs  portable.rs  ports.rs  rules.rs  scaffold.rs  scripts.rs  snapshots.rs  storage.rs  versioning.rs  vscode.rs
src-tauri/src/core/analysis/: detection.rs  doctor.rs  health.rs  mod.rs  rules.rs
src-tauri/src/core/catalog/: mod.rs
src-tauri/src/core/history/: env.rs  mod.rs  versioning.rs
src-tauri/src/core/models/: project.rs
src-tauri/src/core/project/: config.rs  manifest.rs  mod.rs  notes.rs  portable.rs  storage.rs
src-tauri/src/core/recipes/: mod.rs
src-tauri/src/core/runtime/: activate.rs  docker.rs  git.rs  managers.rs  mod.rs  ports.rs  processes.rs  scripts.rs
src-tauri/src/core/store/: json_store.rs  migration.rs  migrations.rs  mod.rs  sqlite_store.rs  traits.rs
src-tauri/src/core/templates/: docker_compose.rs  fullstack_react_python.rs  mod.rs  node_express.rs  python_django.rs  python_fastapi.rs  react_vite.rs  registry.rs  rust_cli.rs
src-tauri/src/core/templates/files/docker_compose/: .env.example  README.md  docker-compose.yml
src-tauri/src/core/templates/files/fullstack_react_python/: .gitignore  README.md  backend_app_main.py  frontend_package.json  frontend_src_App.tsx
src-tauri/src/core/templates/files/node_express/: README.md  package.json  src_index.js
src-tauri/src/core/templates/files/python_django/: .gitignore  README.md
src-tauri/src/core/templates/files/python_fastapi/: README.md  app_main.py
src-tauri/src/core/templates/files/react_vite/: README.md  package.json  src_App.tsx
src-tauri/src/core/templates/files/rust_cli/: Cargo.toml  README.md  src_main.rs
src-tauri/src/core/utils/: editor.rs  fs.rs  mod.rs  platform.rs
src-tauri/src/core/workspace/: mod.rs  scaffold.rs  scaffold_constants.rs  vscode.rs
src-tauri/src/enterprise/: license.rs  mod.rs
src-tauri/src/models/: config.rs  mod.rs  project.rs  template.rs
src-tauri/src/tui/: banner.rs  commands.rs  detect.rs  history.rs  menu.rs  mod.rs  wizard.rs
src-tauri/src/utils/: fs.rs  mod.rs  platform.rs  process.rs
src/components/dashboard/: CreateProjectModal.tsx  ImportProjectModal.tsx  ProjectCard.tsx  RegisterProjectModal.tsx
src/components/layout/: AppLayout.tsx  Sidebar.tsx  Titlebar.css  Titlebar.tsx
src/components/project/: ProjectTabs.tsx
src/components/project/tabs/: DockerTab.tsx  GitTab.tsx  HealthTab.tsx  ManifestTab.tsx  NotesTab.tsx  ProcessesTab.tsx  RecipesTab.tsx  ScriptsTab.tsx  VersioningTab.tsx
src/components/templates/: UseTemplateModal.tsx
src/components/ui/: PathInput.tsx  PreviewConfirmModal.css  PreviewConfirmModal.tsx  ScrollRow.tsx  Spinner.tsx  Toast.css  Toast.tsx  Tooltip.css  Tooltip.tsx
src/i18n/: en.json  es.json
src/lib/: catalog.ts  errors.ts  tauri.ts  tech-meta.ts  tech-safelist.ts
src/pages/: Catalog.tsx  Dashboard.tsx  ProjectDetail.tsx  Scaffold.tsx  Settings.tsx  Templates.tsx
src/stores/: projects.ts  settings.ts
src/styles/delixon/: base.css  colors.css  fonts.css
src/styles/nexenv/: base.css  colors.css  fonts.css
src/styles/tech/: brand.css  catalog.css
src/types/: catalog.ts  config.ts  docker.ts  git.ts  health.ts  notes.ts  portable.ts  processes.ts  project.ts  recipes.ts  scaffold.ts  scripts.ts  template.ts  versioning.ts
tests/unit/: app.test.tsx  tauri-api.test.ts
