[package]
name = "delixon"
version = "0.1.0"
description = "Gestor de workspaces para desarrolladores"
authors = ["dRaydel"]
license = "MIT"
repository = "https://github.com/deli-technology/delixon-app"
edition = "2021"
rust-version = "1.77"

[lib]
name = "delixon_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "=2.5.6", features = [] }

[dependencies]
tauri = { version = "=2.10.3", features = [] }
tauri-plugin-shell = "=2.3.5"
tauri-plugin-fs = "=2.4.5"
tauri-plugin-process = "=2.3.1"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
tokio = { version = "=1.50.0", features = ["full"] }
which = "=6.0.3"
dirs = "=5.0.1"
thiserror = "=1.0.69"
uuid = { version = "=1.22.0", features = ["v4"] }
chrono = { version = "=0.4.44", features = ["serde"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
