[package]
name = "delixon"
version = "1.0.0"
description = "Gestor de workspaces para desarrolladores"
authors = ["dRaydel"]
license = "MIT"
repository = "https://github.com/deli-technology/delixon-app"
edition = "2021"
rust-version = "1.77"
default-run = "delixon"

[lib]
name = "delixon_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "delixon"
path = "src/main.rs"

[[bin]]
name = "delixon-cli"
path = "src/bin/cli.rs"

[features]
default = ["tauri-app"]
tauri-app = [
    "dep:tauri",
    "dep:tauri-plugin-shell",
    "dep:tauri-plugin-fs",
    "dep:tauri-plugin-process",
    "dep:tauri-plugin-dialog",
    "dep:tauri-build",
]

[build-dependencies]
tauri-build = { version = "=2.5.6", features = [], optional = true }

[dependencies]
tauri = { version = "=2.10.3", features = [], optional = true }
tauri-plugin-shell = { version = "=2.3.5", optional = true }
tauri-plugin-fs = { version = "=2.4.5", optional = true }
tauri-plugin-process = { version = "=2.3.1", optional = true }
tauri-plugin-dialog = { version = "2", optional = true }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
tokio = { version = "=1.50.0", features = ["full"] }
which = "=8.0.2"
dirs = "=6.0.0"
thiserror = "=2.0.18"
uuid = { version = "=1.22.0", features = ["v4"] }
chrono = { version = "=0.4.44", features = ["serde"] }
clap = { version = "=4.5.40", features = ["derive"] }
colored = "=3.0.0"
serde_yml = "=0.0.12"
rusqlite = { version = "=0.39.0", features = ["bundled"] }

[dev-dependencies]
tempfile = "=3.20.0"
serial_test = "3"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
