[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "nexenv"
version = "1.1.2"
description = "Per-project development environment manager. Detects stack, isolates variables, opens projects ready to work. Source-available (FSL-1.1-ALv2)."
readme = "README.md"
license = "LicenseRef-FSL-1.1-ALv2"
license-files = ["LICENSE"]
requires-python = ">=3.9"
authors = [
    {name = "Delixon Labs", email = "hello@delixon.dev"}
]
keywords = ["nexenv", "developer-tools", "devtools", "environment-manager", "per-project-environment", "stack-detection", "local-first"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Build Tools",
]

[project.urls]
Homepage = "https://delixon.dev/nexenv"
Repository = "https://github.com/delixon-labs/delixon-nexenv"

[project.scripts]
nexenv = "nexenv.cli:main"
